--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="vi">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    
+    <!-- Meta cơ bản cho mobile & PWA -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Quản lý ca bảo hành TV Xiaomi - Bảo Hiểm Xã Hội Đà Nẵng" />
+    <meta name="theme-color" content="#0056b3" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="mobile-web-app-capable" content="yes" />
+
+    <!-- Title đẹp cho tab và màn hình chính -->
+    <title>BH TV Xiaomi - Đà Nẵng</title>
+
+    <!-- Link manifest cho PWA -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Icon cho PWA (192 và 512 là chuẩn) -->
+    <link rel="apple-touch-icon" href="/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png" />
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+
+    <!-- Đăng ký service worker cho PWA (offline cache cơ bản) -->
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js')
+          .then(reg => {
+            console.log('✅ Service Worker registered:', reg)
+          })
+          .catch(err => {
+            console.error('❌ SW registration failed:', err)
+          })
+      }
+    </script>
   </body>
 </html>
