Complete PWA setup with manifest & icons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>BH TV Xiaomi - Đà Nẵng</title>
 
     <!-- Link manifest cho PWA -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/vue-project/public/manifest.json" />
 
     <!-- Icon cho PWA (192 và 512 là chuẩn) -->
     <link rel="apple-touch-icon" href="/icon-192.png" />
